// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Posts > Post create > should cancel post create and render post list 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
      <a
        data-discover="true"
        href="/dashboard/posts/create"
      >
        <button
          class="_create_d066aa"
        >
          Create
        </button>
      </a>
    </div>
    <div
      class="_PostList_3be64a"
    >
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Title
        </h2>
      </div>
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Author
        </h2>
      </div>
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Published
        </h2>
      </div>
      <div
        class="_header_3be64a"
      />
      <div
        class="_header_3be64a"
      />
      <ul
        class="_ul_3be64a"
      />
    </div>
  </main>
</div>
`;

exports[`Posts > Post create > should render post create 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
    </div>
    <section
      class="_PostCreate_22164d"
    >
      <div
        class="_header_22164d"
      >
        <h2>
          Create
        </h2>
      </div>
      <form
        class="_form_22164d"
      >
        <div
          class="_inputGroup_22164d"
        >
          <label
            class="_label_22164d"
            for="title"
          >
            Title
          </label>
          <input
            class="_input_22164d"
            id="title"
            name="title"
            type="text"
            value=""
          />
        </div>
        <div
          class="_textareaGroup_22164d"
        >
          <label
            class="_label_22164d"
            for="content"
          >
            Content
          </label>
          <textarea
            class="_textarea_22164d"
            id="content"
            name="content"
            type="text"
          />
        </div>
        <div
          class="_selectGroup_22164d"
        >
          <label
            class="_label_22164d"
            for="status"
          >
            Status
          </label>
          <select
            class="_select_22164d"
            name="status"
          >
            <option
              value="true"
            >
              Published
            </option>
            <option
              value="false"
            >
              Unpublished
            </option>
          </select>
        </div>
        <div
          class="_buttonContainer_22164d"
        >
          <input
            class="_submit_22164d"
            type="submit"
            value="Submit"
          />
        </div>
        <div
          class="_buttonContainer_22164d"
        >
          <a
            data-discover="true"
            href="/dashboard/posts"
          >
            <button
              class="_cancel_22164d"
            >
              Cancel
            </button>
          </a>
        </div>
      </form>
    </section>
  </main>
</div>
`;

exports[`Posts > Post create > should submit post and render post list 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
    </div>
    <div
      class="_PostList_3be64a"
    >
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Title
        </h2>
      </div>
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Author
        </h2>
      </div>
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Published
        </h2>
      </div>
      <div
        class="_header_3be64a"
      />
      <div
        class="_header_3be64a"
      />
      <ul
        class="_ul_3be64a"
      />
    </div>
  </main>
</div>
`;

exports[`Posts > Post edit > should cancel post edit and render post list 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
      <a
        data-discover="true"
        href="/dashboard/posts/create"
      >
        <button
          class="_create_d066aa"
        >
          Create
        </button>
      </a>
    </div>
    <div
      class="_PostList_3be64a"
    >
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Title
        </h2>
      </div>
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Author
        </h2>
      </div>
      <div
        class="_header_3be64a"
      >
        <h2
          class="_h2_3be64a"
        >
          Published
        </h2>
      </div>
      <div
        class="_header_3be64a"
      />
      <div
        class="_header_3be64a"
      />
      <ul
        class="_ul_3be64a"
      >
        <li
          class="_PostListItem_d6174f"
        >
          <div
            class="_title_d6174f"
          >
            Post title 1
          </div>
          <div
            class="_author_d6174f"
          >
            foobar
          </div>
          <div
            class="_published_d6174f"
          >
            12 Nov 2025 at 11:28:54
          </div>
          <a
            class="_edit_d6174f"
            data-discover="true"
            href="/dashboard/posts/1/edit"
          >
            Edit
          </a>
          <form
            class="_form_d6174f"
          >
            <input
              class="_delete_d6174f"
              type="submit"
              value="Delete"
            />
          </form>
        </li>
      </ul>
    </div>
  </main>
</div>
`;

exports[`Posts > Post edit > should render post edit 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
    </div>
    <section
      class="_PostEdit_94c798"
    >
      <div
        class="_header_94c798"
      >
        <h2>
          Edit
        </h2>
      </div>
      <form
        class="_form_94c798"
      >
        <div
          class="_inputGroup_94c798"
        >
          <label
            class="_label_94c798"
            for="title"
          >
            Title
          </label>
          <input
            class="_input_94c798"
            id="title"
            name="title"
            type="text"
            value="Post title 1"
          />
        </div>
        <div
          class="_textareaGroup_94c798"
        >
          <label
            class="_label_94c798"
            for="content"
          >
            Content
          </label>
          <textarea
            class="_textarea_94c798"
            id="content"
            name="content"
            type="text"
          >
            Post content 1
          </textarea>
        </div>
        <div
          class="_selectGroup_94c798"
        >
          <label
            class="_label_94c798"
          >
            Status
          </label>
          <select
            class="_select_94c798"
            name="status"
          >
            <option
              value="true"
            >
              Published
            </option>
            <option
              value="false"
            >
              Unpublished
            </option>
          </select>
        </div>
        <div
          class="_buttonContainer_94c798"
        >
          <input
            class="_submit_94c798"
            type="submit"
            value="Submit"
          />
        </div>
        <div
          class="_buttonContainer_94c798"
        >
          <a
            data-discover="true"
            href="/dashboard/posts"
          >
            <button
              class="_cancel_94c798"
            >
              Cancel
            </button>
          </a>
        </div>
      </form>
    </section>
  </main>
</div>
`;

exports[`Posts > Post edit > should submit post edit and refresh page 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
    </div>
    <section
      class="_PostEdit_94c798"
    >
      <div
        class="_header_94c798"
      >
        <h2>
          Edit
        </h2>
      </div>
      <form
        class="_form_94c798"
      >
        <div
          class="_inputGroup_94c798"
        >
          <label
            class="_label_94c798"
            for="title"
          >
            Title
          </label>
          <input
            class="_input_94c798"
            id="title"
            name="title"
            type="text"
            value="Update post title 1"
          />
        </div>
        <div
          class="_textareaGroup_94c798"
        >
          <label
            class="_label_94c798"
            for="content"
          >
            Content
          </label>
          <textarea
            class="_textarea_94c798"
            id="content"
            name="content"
            type="text"
          >
            Update post content 1
          </textarea>
        </div>
        <div
          class="_selectGroup_94c798"
        >
          <label
            class="_label_94c798"
          >
            Status
          </label>
          <select
            class="_select_94c798"
            name="status"
          >
            <option
              value="true"
            >
              Published
            </option>
            <option
              value="false"
            >
              Unpublished
            </option>
          </select>
        </div>
        <div
          class="_buttonContainer_94c798"
        >
          <input
            class="_submit_94c798"
            type="submit"
            value="Submit"
          />
        </div>
        <div
          class="_buttonContainer_94c798"
        >
          <a
            data-discover="true"
            href="/dashboard/posts"
          >
            <button
              class="_cancel_94c798"
            >
              Cancel
            </button>
          </a>
        </div>
      </form>
    </section>
  </main>
</div>
`;

exports[`Posts > should render posts 1`] = `
<div>
  <main
    class="_Posts_d066aa"
  >
    <div
      class="_header_d066aa"
    >
      <h1>
        Posts
      </h1>
      <a
        data-discover="true"
        href="/dashboard/posts/create"
      >
        <button
          class="_create_d066aa"
        >
          Create
        </button>
      </a>
    </div>
    <div
      class="_message_3be64a"
    >
      Loading...
    </div>
  </main>
</div>
`;
